2005-06-10  Kevin Layer  <layer@gemini>

	* incfilter.cl: fix broken format string (in the debug case only)

2005-06-10  Ahmon Dancy  <dancy@dancy>

	* sub.cl: Added with-timeout around dispatched-to-p and
	bh-appended-p so that they signal an error if the transaction
	takes more than *http-timeout* (default 15) seconds.
	* incfilter.cl: Catch all unhandled errors and report them as
	"inc: <error message>".  The mh-e stuff expects error messages to
	be prefixed with "inc:".


2004-12-17  Kevin Layer  <layer@gemini>

	* subs.cl:
	- remove last few match-regexp's in favor of match-re
	- clean msgid before sending it in http query

2004-11-30  Kevin Layer  <layer@gemini>

	* Makefile: add cvs id
	* folderfilter.cl: use new regexp
	* incfilter.cl: -d to give backtrace if an error occurs
	* load.cl: load :shell and :regexp2 modules
	* mailstatus.cl: backtrace on error (if -d); use new regexp
	* subs.cl: use new regexp

2004-09-28  Kevin Layer  <layer@gemini>

	* Makefile: `install': save current version to ``.old''
	* subs.cl:
	- minor cleanup to defclassification (use macrolet for
	  subject-match and class-match)
	- add case-fold keyword to `match'
	- ignore case in address-matches-p

2004-06-12  Ahmon Dancy  <dancy@dancy>

	* subs.cl:  Added bh-appended-p function for handler's use.

2004-05-28  Ahmon Dancy  <dancy@dancy>
	* incfilter.cl: Don't write to *logfilename* when in debug mode.
	
2003-10-01  Ahmon Dancy  <dancy@dancy>

	* subs.cl: dispatched-to-p: uriencode reportid and user strings
	before passing them to do-http-request.

	* subs.cl: collect-bh-id:  Do the same regular expression matching
	on bh-id and subject headers (with preference given to the bh-id
	header).  Before any data in the Bh-id header was accepted.  Now
	only spr, bug, and rfe types are matched.

	* incfilter.cl/sub.slc:  Make *logfilename* really work like a
	configurable parameter.

2003-09-30  Ahmon Dancy  <dancy@dancy>

	* incfilter.cl:  Writes to $HOME/incfilter.log for auditing.
